chore: improve desktop layout fix: use correct logo in play mode feat: prevent playing in landscape mode on mobile devices feat: redirect when game state is not ready on refresh/first load

--- a/roshambo-ui/src/index.css
+++ b/roshambo-ui/src/index.css
@@ -29,7 +29,7 @@
 
 @media only screen and (min-width: 600px)  {
   #root {
-    max-width: 800px;
+    max-width: 600px;
     margin: 0 auto;
   }
 }
